Fix border bottom not showing on blocks in sidebar

--- a/app/assets/stylesheets/pages/issuable.scss
+++ b/app/assets/stylesheets/pages/issuable.scss
@@ -214,6 +214,7 @@
   .issuable-sidebar-header {
     @include clearfix;
     padding: $gl-padding 0;
+    border-bottom: 1px solid $border-gray-normal;
     // This prevents the mess when resizing the sidebar
     // of elements repositioning themselves..
     width: $gutter-inner-width;
